ENH: Basic tests, add a bunch of docs
